<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.herts.mint.MenuActivity">

    <FrameLayout
        android:id="@+id/frame_nhs"
        android:layout_width="374dp"
        android:layout_height="274dp"
        android:background="@drawable/layout_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Enter NHS Number" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="TextView" />

            <Button
                android:id="@+id/bt_nhs"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="NHS Sign In" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_login"
        android:layout_width="442dp"
        android:layout_height="375dp"
        android:layout_below="@id/frame_nhs"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/layout_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_username4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/border_color"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/input_password4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_login4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/signin_btn"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_register4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparent_black_ten_percent"
                android:padding="2dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_forgot_password4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_black_ten_percent"
                android:padding="2dp"
                android:text="@string/forgotpass"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
